--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -1,1 +1,18 @@
+name: Super-Linter
 
+on: push
+
+jobs:
+  super-lint:
+    name: Lint Code Base
+    runs-on: Ubuntu-latest
+
+    steps: 
+      -name= checkout
+      uses: actions/checkout@v2
+
+      -name= Super-Linter
+      uses: github/super-linter@v4.9.5
+      env:
+        DEFAULT_BRANCH: main
+        GITHUB_TOKEN: {{secrets.GITHUB_TOKEN}}
