--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -8,10 +8,10 @@ jobs:
     runs-on: Ubuntu-latest
 
     steps: 
-      -name= checkout
+      -name: checkout
       uses: actions/checkout@v2
 
-      -name= Super-Linter
+      -name: Super-Linter
       uses: github/super-linter@v4.9.5
       env:
         DEFAULT_BRANCH: main
